docs/alphaindexes/4.0.x/modstatistics.md
# Statistic variables/counters

Overview of statistics variables/core counters defined in modules. For
more information, check the documentation of the statistics and counters
modules.

([0](#0)) ([1](#1)) ([2](#2)) ([3](#3)) ([4](#4)) ([5](#5)) ([6](#6))
([7](#7)) ([8](#8)) ([9](#9)) ([A](#a)) ([B](#b)) ([C](#c)) ([D](#d))
([E](#e)) ([F](#f)) ([G](#g)) ([H](#h)) ([I](#i)) ([J](#j)) ([K](#k))
([L](#l)) ([M](#m)) ([N](#n)) ([O](#o)) ([P](#p)) ([Q](#q)) ([R](#r))
([S](#s)) ([T](#t)) ([U](#u)) ([V](#v)) ([W](#w)) ([X](#x)) ([Y](#y))
([Z](#z))

## \[0\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[1\]

| Name            | Module Path | Module Name                                                      |
|-----------------|-------------|------------------------------------------------------------------|
| **1xx_replies** | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html) |

## \[2\]

| Name                 | Module Path | Module Name                                                        |
|----------------------|-------------|--------------------------------------------------------------------|
| **200_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **202_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **2xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **2xx_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html) |

## \[3\]

| Name                 | Module Path | Module Name                                                        |
|----------------------|-------------|--------------------------------------------------------------------|
| **300_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **301_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **302_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **3xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **3xx_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html) |

## \[4\]

| Name                 | Module Path | Module Name                                                        |
|----------------------|-------------|--------------------------------------------------------------------|
| **400_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **401_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **403_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **404_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **407_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **408_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **483_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **4xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **4xx_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html) |

## \[5\]

| Name                 | Module Path | Module Name                                                        |
|----------------------|-------------|--------------------------------------------------------------------|
| **500_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **5xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **5xx_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html) |

## \[6\]

| Name                 | Module Path | Module Name                                                        |
|----------------------|-------------|--------------------------------------------------------------------|
| **6xx_replies**      | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)   |
| **6xx_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html) |

## \[7\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[8\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[9\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[A\]

| Name                                                  | Module Path | Module Name                                                                    |
|-------------------------------------------------------|-------------|--------------------------------------------------------------------------------|
| **AAR Timeouts (aar_timeouts)**                       | *modules*   | [ims_qos](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_qos.html)     |
| **accepted_regs**                                     | *modules*   | [registrar](http://www.kamailio.org/docs/modules/4.0.x/modules/registrar.html) |
| **active_dialogs**                                    | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.0.x/modules/dialog.html)       |
| **active_rooms**                                      | *modules*   | [imc](http://www.kamailio.org/docs/modules/4.0.x/modules/imc.html)             |
| **Average AAR Response Time (aar_avg_response_time)** | *modules*   | [ims_qos](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_qos.html)     |
| **Average LIR Response Time (lir_avg_response_time)** | *modules*   | [ims_icscf](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_icscf.html) |
| **Average MAR Response Time (mar_avg_response_time)** | *modules*   | [ims_auth](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_auth.html)   |
| **Average UAR Response Time (uar_avg_response_time)** | *modules*   | [ims_icscf](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_icscf.html) |

## \[B\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[C\]

| Name         | Module Path | Module Name                                                              |
|--------------|-------------|--------------------------------------------------------------------------|
| **contacts** | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.0.x/modules/usrloc.html) |

## \[D\]

| Name                 | Module Path | Module Name                                                                            |
|----------------------|-------------|----------------------------------------------------------------------------------------|
| **defaults_expires** | *modules*   | [registrar](http://www.kamailio.org/docs/modules/4.0.x/modules/registrar.html)         |
| **dialog_endpoints** | *modules*   | [nat_traversal](http://www.kamailio.org/docs/modules/4.0.x/modules/nat_traversal.html) |
| **dumped_messages**  | *modules*   | [msilo](http://www.kamailio.org/docs/modules/4.0.x/modules/msilo.html)                 |
| **dumped_reminders** | *modules*   | [msilo](http://www.kamailio.org/docs/modules/4.0.x/modules/msilo.html)                 |

## \[E\]

| Name                 | Module Path | Module Name                                                                                  |
|----------------------|-------------|----------------------------------------------------------------------------------------------|
| **early_dialogs**    | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.0.x/modules/dialog.html)                     |
| **expired contacts** | *modules*   | [ims_usrloc_pcscf](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_usrloc_pcscf.html) |
| **expired_dialogs**  | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.0.x/modules/dialog.html)                     |
| **expired_sst**      | *modules*   | [sst](http://www.kamailio.org/docs/modules/4.0.x/modules/sst.html)                           |
| **expires**          | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.0.x/modules/usrloc.html)                     |

## \[F\]

| Name                 | Module Path | Module Name                                                              |
|----------------------|-------------|--------------------------------------------------------------------------|
| **failed_dialogs**   | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.0.x/modules/dialog.html) |
| **failed_messages**  | *modules*   | [msilo](http://www.kamailio.org/docs/modules/4.0.x/modules/msilo.html)   |
| **failed_reminders** | *modules*   | [msilo](http://www.kamailio.org/docs/modules/4.0.x/modules/msilo.html)   |
| **failures**         | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)         |

## \[G\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[H\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[I\]

| Name                   | Module Path | Module Name                                                                                  |
|------------------------|-------------|----------------------------------------------------------------------------------------------|
| **impus**              | *modules*   | [ims_usrloc_pcscf](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_usrloc_pcscf.html) |
| **inuse_transactions** | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html)                           |

## \[J\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[K\]

| Name                    | Module Path | Module Name                                                                            |
|-------------------------|-------------|----------------------------------------------------------------------------------------|
| **keepalive_endpoints** | *modules*   | [nat_traversal](http://www.kamailio.org/docs/modules/4.0.x/modules/nat_traversal.html) |

## \[L\]

| Name                            | Module Path | Module Name                                                                    |
|---------------------------------|-------------|--------------------------------------------------------------------------------|
| **LIR Timeouts (lir_timeouts)** | *modules*   | [ims_icscf](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_icscf.html) |
| **local_replies**               | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html)             |

## \[M\]

| Name                            | Module Path | Module Name                                                                    |
|---------------------------------|-------------|--------------------------------------------------------------------------------|
| **MAR Timeouts (mar_timeouts)** | *modules*   | [ims_auth](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_auth.html)   |
| **max_contacts**                | *modules*   | [registrar](http://www.kamailio.org/docs/modules/4.0.x/modules/registrar.html) |
| **max_expires**                 | *modules*   | [registrar](http://www.kamailio.org/docs/modules/4.0.x/modules/registrar.html) |

## \[N\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[O\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[P\]

| Name                  | Module Path | Module Name                                                              |
|-----------------------|-------------|--------------------------------------------------------------------------|
| **processed_dialogs** | *modules*   | [dialog](http://www.kamailio.org/docs/modules/4.0.x/modules/dialog.html) |

## \[Q\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[R\]

| Name                     | Module Path | Module Name                                                                                  |
|--------------------------|-------------|----------------------------------------------------------------------------------------------|
| **received_ACKs**        | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)                             |
| **received_replies**     | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html)                           |
| **registered contacts**  | *modules*   | [ims_usrloc_pcscf](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_usrloc_pcscf.html) |
| **registered_endpoints** | *modules*   | [nat_traversal](http://www.kamailio.org/docs/modules/4.0.x/modules/nat_traversal.html)       |
| **registered_users**     | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.0.x/modules/usrloc.html)                     |
| **rejected_regs**        | *modules*   | [registrar](http://www.kamailio.org/docs/modules/4.0.x/modules/registrar.html)               |
| **relayed_replies**      | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html)                           |

## \[S\]

| Name                     | Module Path | Module Name                                                                            |
|--------------------------|-------------|----------------------------------------------------------------------------------------|
| **sent_err_replies**     | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)                       |
| **sent_replies**         | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html)                       |
| **stored_messages**      | *modules*   | [msilo](http://www.kamailio.org/docs/modules/4.0.x/modules/msilo.html)                 |
| **subscribed_endpoints** | *modules*   | [nat_traversal](http://www.kamailio.org/docs/modules/4.0.x/modules/nat_traversal.html) |

## \[T\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[U\]

| Name                            | Module Path | Module Name                                                                    |
|---------------------------------|-------------|--------------------------------------------------------------------------------|
| **UAC_transactions**            | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html)             |
| **UAR Timeouts (uar_timeouts)** | *modules*   | [ims_icscf](http://www.kamailio.org/docs/modules/4.0.x/modules/ims_icscf.html) |
| **UAS_transactions**            | *modules*   | [tmx](http://www.kamailio.org/docs/modules/4.0.x/modules/tmx.html)             |
| **users**                       | *modules*   | [usrloc](http://www.kamailio.org/docs/modules/4.0.x/modules/usrloc.html)       |

## \[V\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[W\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[X\]

| Name            | Module Path | Module Name                                                      |
|-----------------|-------------|------------------------------------------------------------------|
| **xxx_replies** | *modules*   | [sl](http://www.kamailio.org/docs/modules/4.0.x/modules/sl.html) |

## \[Y\]

| Name | Module Path | Module Name |
|------|-------------|-------------|

## \[Z\]

| Name | Module Path | Module Name |
|------|-------------|-------------|
